public/css/analyt.css
body {
  font-family: 'Roboto', sans-serif;
}

.navbar-brand {
  font-size: 1.3rem;
}

.alert-icon {
  width: 1.5rem;
  height: 1.5rem;
}

.brand-logo {
  width: 2.2rem;
  height: 2.3rem;
  display: inline-block;
  padding-bottom: 0.4rem;
}

.brand-title {
  font-family: 'Lobster', cursive;
}

.custom-control-input:checked ~ .custom-control-label::before {
  background-color: #28a745;
  border-color: #28a745;
}

.navbar-brand > img {
  height: 30px;
}

.navbar-brand > span {
  display: none;
}

.nav-pills .nav-item > a {
  font-size: 0.8rem;
}

.google-button {
  height: 40px;
  border-width: 0;
  background: #f0f0f0;
  color: #737373;
  border-radius: 5px;
  white-space: nowrap;
  box-shadow: 1px 1px 0px 1px rgba(0,0,0,0.05);
  transition-property: background-color, box-shadow;
  transition-duration: 150ms;
  transition-timing-function: ease-in-out;
  padding: 0;

  &:focus,
  &:hover {
    box-shadow: 1px 4px 5px 1px rgba(0,0,0,0.1);
  }

  &:active {
    background-color: #e5e5e5;
    box-shadow: none;
    transition-duration: 10ms;
  }
}

.google-button__icon {
  display: inline-block;
  vertical-align: middle;
  margin: 8px 0 8px 8px;
  width: 18px;
  height: 18px;
  box-sizing: border-box;
}

.google-button__icon--plus {
  width: 27px;
}

.google-button__text {
  display: inline-block;
  vertical-align: middle;
  padding: 0 24px;
  font-size: 14px;
  font-weight: bold;
  font-family: 'Roboto', arial, sans-serif;
}

button.google-button ~ button {
  margin-left: 20px;
}

#loading-overlay {
  display:flex;
  justify-content:left;
  align-items:left;
  width:100%;
  height:100%;
  background-color: white;
}

.loading-spinner {
  width:3em;
  height:3em;
}

.select2-container {
  width: 100% !important;
}

.toasts {
  position: absolute;
  top: 3rem;
  right: 0;
  margin: 10px
}

textarea.results-output,
div.results-output {
  font-size: 0.7rem;
  min-height: 350px;
  overflow: scroll;
}

div.results-output {
  background-color: #e9ecef;
}

div.results-output > ul {
  margin: 0px;
  padding: 0px;
}

div.results-output > ul > li {
  list-style: none;
}

div.results-output > ul > li *{
  padding-right: 0.2rem;
}

span.logger-message {
  font-weight: bold;
}

span.logger-info {
  color: #007bff;
}

span.logger-warn {
  color: #ffc107;
}

span.logger-error {
  color: #dc3545;
}

@media (max-width: 576px) {
  .toasts {
    top: 5.5rem;
    left: 0rem;
    position: fixed;
    opacity: 1;
  }

  .toasts .toast {
    max-width: 100%;
  }
}

.scrollable-x {
  overflow-x: scroll;
  display: block;
}

.spinner-small {
  width: 1.2rem;
  height: 1.2rem;
}

@media (min-width: 1200px) {
  .modal-xxl {
    max-width: 95%;
  }
}

